# aql

./: .env.example  .firebaserc  .gitignore  ACTIVE_ORGANIZATION_LOCATION_FIX_SUMMARY.md  ALL_FIXES_COMPLETE.md  AMENDMENT_APPROVAL_FIX.md  AMENDMENT_DEPOSIT_SUMMARY.md  APPLY_MIGRATIONS_NOW.md  APPOINTMENT_SCHEDULING_SYSTEM.md  AUTOMATED_BILLING_SYSTEM.md  BEGINNER_SUMMARY.md  BILLING_AND_INVOICES_UPDATE.md  BOT_DATA_FRONTEND_GUIDE.md  BOT_DATA_GENERATION.md  BOT_DATA_TRACKING_SUMMARY.md  BOT_MANAGEMENT_IMPROVEMENTS.md  BOT_MANAGEMENT_SYSTEM.md  BOT_TRACKING_COMPLETE_SYSTEM.md  BOT_TRACKING_SETUP.md  BOT_TRACKING_SETUP_COMPLETE.md  BOT_TRACKING_SYSTEM_ARCHITECTURE.md  BOT_TRACKING_USER_ACCESS.md  CASCADE_DELETE_IMPLEMENTATION.md  CASCADE_DELETE_SUMMARY.md  CHANGES_SUMMARY.md  CLEANUP_OLD_CHARGE_AUTHORIZATION.md  CLI_COMMANDS.md  COLOR_FIXES_COMPLETE.md  COLOR_MIGRATION_GUIDE.md  COMPLETE_DASHBOARD_FIX.sql  COMPLETE_FIX_SUMMARY.md  CONTEXT_FIX_COMPLETE.md  CONTRIBUTING.md  COVERAGE_MAP_IMPROVEMENTS.md  DATABASE_ISSUES_EXPLANATION.md  DATABASE_RESET_GUIDE.md  EDGE_FUNCTION_SETUP.md  FINAL_FIX.sql  FINAL_UI_UX_REDESIGN.md  FIXES_SUMMARY.md  (+57 more)
_bomah/: .env.example  .gitignore  home_automation_schema.sql  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
backend/: .gitignore  ARCHITECTURE_UPDATE_GUIDE.md  BOT_DATA_TRACKING_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  GET_SUPABASE_KEY_NOW.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  config.py  deploy.sh  main.py  (+3 more)
game/cpp/: CMakeLists.txt  build_wasm.sh  main.cpp  main_web.cpp  shell.html
(+478 files in other folders)
